Add calendar available, list all events, modify them and save them are available. Need to implement some check for internet connection, change alert popup, save in agenda application. Need also to get back the agenda id from the agenda list available

--- a/www/css/cc.css
+++ b/www/css/cc.css
@@ -260,6 +260,9 @@ input {
 .cc-button-validate {
   background-color: green; }
 
+.cc-button-theme {
+  background-color: #A80039; }
+
 .cc-input-select {
   display: block;
   background-color: white;
