--- a/www/scss/cc.scss
+++ b/www/scss/cc.scss
@@ -408,6 +408,11 @@ input
     background-color: $cc-theme-ok;
 }
 
+.cc-button-theme
+{
+    background-color: $cc-theme;
+}
+
 .cc-input-select
 {
     display: block;
