--- a/www/templates/calendar.html
+++ b/www/templates/calendar.html
@@ -1,9 +1,9 @@
-<ion-view class="has-header">
+<ion-view>
     <ion-content>
         <div class="cc-container cc-padding">
             <div class="cc-row">
                 <p class="cc-theme-color cc-align-center cc-title">
-                    {{addCalendarTitle}}
+                    {{cc_text_pageTitle}}
                 </p>
                 <div class="list cc-list">
                     <label class="item cc-item item-input item-stacked-label">
@@ -60,23 +60,7 @@
                         </a>
                     </div>
                 </div>
-                <!--
-                <div class="cc-container">
-                    <div class="row">
-                        <div class="col col-50 cc-align-center">
-                            <button class="cc-button cc-button-cancel" ng-click="cancelClick()">{{text_cancel}}</button>
-                        </div>
-                        <div class="col col-50 cc-align-center">
-                            <button class="cc-button cc-button-validate" ng-click="validateClick()">{{text_register}}</button>
-                        </div>
-                    </div>
-                </div>
-                -->
             </div>
         </div>
     </ion-content>
 </ion-view>
-
-<!--
-https://hplanning2015.umons.ac.be/Telechargements/ical/EdT_MAB1_en_sciences_mathematiques__FA.ics?version=13.0.2.1&idICal=C16CCBF2F5D2E0FE398916B7A03CDD21&param=643d5b312e2e36325d2666683d3126663d3131303030
--->
