--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -3,15 +3,14 @@
         <div class="cc-container cc-padding">
             <div class="cc-row">
                 <p class="cc-theme-color cc-align-center cc-title">
-                    UMONS MA1 Math Finalité informatique
+                    {{calendarName}}
                 </p>
                 <div class="cc-padding-top cc-padding-bottom cc-border-bottom" ng-repeat="event in events">
-                    <ion-toggle ng-toggle="toggleSynchronize({{'event-' + event.id}});"
-                                class="cc-size-title cc-item-toggle cc-black"
+                    <ion-toggle class="cc-size-title cc-item-toggle cc-black"
                                 ng-model="event.synchronize">
                         Synchroniser cet événement
                     </ion-toggle>
-                    <div id="{{'event-' + event.id}}">
+                    <div>
                         <p ng-class="{ 'cc-black': event.synchronize, 'cc-grey': !event.synchronize }" class="cc-events-p cc-size-subtitle">
                             {{text_rename}}
                         </p>
@@ -21,21 +20,16 @@
                         <p ng-class="{ 'cc-black': event.synchronize, 'cc-grey': !event.synchronize }" class="cc-events-p cc-input-label cc-no-padding cc-black cc-size-subtitle">
                             {{text_in}}
                         </p>
-                        <input ng-class="{ 'cc-theme-color': event.synchronize, 'cc-grey': !event.synchronize }" ng-readonly="!event.synchronize" type="text" class="cc-size-subtitle" placeHolder="{{text_newName}}" value="{{event.editedName}}"/>
+                        <input  ng-class="{ 'cc-theme-color': event.synchronize, 'cc-grey': !event.synchronize }"
+                                ng-model="event.editedName"
+                                ng-readonly="!event.synchronize"
+                                placeHolder="{{text_newName}}"
+                                type="text"
+                                class="cc-size-subtitle"
+                                value="{{event.editedName}}"
+                            />
                     </div>
                 </div>
-                <!--
-                <div class="cc-container">
-                    <div class="row">
-                        <div class="col col-50 cc-align-center">
-                            <button class="cc-button cc-button-cancel" ng-click="cancelClick()">{{text_cancel}}</button>
-                        </div>
-                        <div class="col col-50 cc-align-center">
-                            <button class="cc-button cc-button-validate" ng-click="validateClick()">{{text_register}}</button>
-                        </div>
-                    </div>
-                </div>
-                -->
             </div>
         </div>
     </ion-content>
